# centrifugo-cpp

./: .gitignore  CMakeLists.txt  devenv.nix
examples/: connect.cpp  full.cpp  server_subscriptions.cpp  staging.cpp
include/: centrifugo.h
include/centrifugo/: common.h  error.h  subscription.h
services/jwt-generator/: app.py
src/: centrifugo.cpp  connection.cpp  connection.h  error.cpp  protocol_all.cpp  protocol_all.h  subscription.cpp  subscription_impl.cpp  subscription_impl.h  transport.cpp  transport.h
